(fix) : add overflow property to fix horizontal scrolling

--- a/designs/ui/static/styles.css
+++ b/designs/ui/static/styles.css
@@ -7,6 +7,9 @@ h1,h2,h3,h4,h5,h6{font-weight : bold;}
 h1{font-size : 24px;}
 h2{font-size : 20px;}
 p{font-size : 14px;}
+html{
+	overflow-x: hidden;
+}
 
 /* ------------------------------------------------------
  * Index page styles
